MB-35289: Set delete time of aborts

When queueing an abort ensure the item expiry time
field contains the current time so that aborts will
later be purged.

Change-Id: I61625e09bbafc5fd91dc02fbd0175b162516d0aa
Reviewed-on: http://review.couchbase.org/112545
Reviewed-by: James Harrison <james.harrison@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>